--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -20,7 +20,7 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: test
-      run: PYTHONPATH=src pytest .
+      run: PYTHONPATH=. pytest
 
     - name: lint
       run: pre-commit run --all-files
