--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     rev: 20.8b1
     hooks:
       - id: black
-        language_version: python3.8
+        language_version: python3.9
 
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.4
@@ -22,3 +22,8 @@ repos:
     rev: v0.790
     hooks:
       - id: mypy
+
+  - repo: https://github.com/asottile/reorder_python_imports
+    rev: v2.3.6
+    hooks:
+      - id: reorder-python-imports
