--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-black==19.10b0
-click<8.0.0
-flake8==3.9.2
-mypy==0.910
-pre-commit==2.13.0
-pur==5.4.1
-pytest==6.2.4
+black==22.1.0
+click==8.0.3
+flake8==4.0.1
+mypy==0.931
+pre-commit==2.17.0
+pur==6.0.1
+pytest==7.0.0
