--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,8 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+      - id: debug-statements
+      - id: name-tests-test
       - id: check-added-large-files
       - id: requirements-txt-fixer
 
