--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,4 +28,5 @@ repos:
   - repo: https://github.com/asottile/reorder_python_imports
     rev: v3.1.0
     hooks:
-      - id: reorder-python-imports
+    -   id: reorder-python-imports
+        args: [--py310-plus]
