--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
     rev: v0.982
     hooks:
       - id: mypy
+        files: ^src/
 
   - repo: https://github.com/asottile/reorder_python_imports
     rev: v3.9.0
