--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,13 @@ exclude = '''
   | dist
 )/
 '''
+
+[tool.mypy]
+python_version = "3.11"
+warn_return_any = true
+warn_unused_configs = true
+exclude = [
+    'tests/',
+    '.venv/'
+]
+strict = true
