Explicitly declare path to `.venv` for PyCharm

--- a/.jb-gateway/Dockerfile
+++ b/.jb-gateway/Dockerfile
@@ -1,3 +1,4 @@
 FROM python:latest
 RUN apt-get update
 RUN apt-get install -y git
+ENV PYCHARM_PYTHON_PATH /mnt/space/work/leetcode/.venv/bin/python
