Add ruff to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,8 @@ repos:
     hooks:
     -   id: pyupgrade
         args: [--py311-plus]
+
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.244
+    hooks:
+      - id: ruff
