Fix the master branch name

--- a/.space/pycharm.devfile.yaml
+++ b/.space/pycharm.devfile.yaml
@@ -16,7 +16,7 @@ attributes:
         - type: gitPush
           branchFilter:
             include:
-              - 'refs/heads/main'
+              - 'refs/heads/master'
       script:
         ./dev-env-warmup.sh
 components:
