--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: prepare
         uses: actions/setup-python@v4
         with:
-          python-version: ">=3.12.0-rc.1"
+          python-version: ">=3.13.0"
 
       - name: install
         run: pip install -r requirements.txt
