--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -9,26 +9,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
         with:
           fetch-depth: 0
 
-      - name: prepare
-        uses: actions/setup-python@v5
-        with:
-          python-version: ">=3.13"
-
       - name: install uv
-        uses: astral-sh/setup-uv@v6
+        uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
 
-      - name: install project dependencies
-        run: uv sync --all-extras --dev
-
-      - name: test
-        run: PYTHONPATH=. uv run pytest
+      - name: install project
+        run: make install
 
       - name: lint
-        run: uv run pre-commit run --all-files
+        run: make lint
+
+      - name: format
+        run: make ci-format
+
+      - name: typecheck
+        run: make typecheck
+
+      - name: test
+        run: make test
