--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,93 @@ exclude = [
 line-length = 80
 target-version = "py314"
 
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+    # conflicts
+    "COM812", # conflicts with ruff format
+    "D203", # conflicts with D211
+    "D213", # conflicts with D213
+
+    # deselect
+    "ANN", # we are using a typechecker
+    "D", # documentation is not a concern for this project
+    "S", # security is not a concern for this project
+
+    # gadual adoption
+    "C901",
+    "PLR2004",
+    "PLR0913",
+    "PLR1704",
+    "PLR5501",
+    "PGH004",
+    "I001",
+    "INP001",
+    "PT006",
+    "PT007",
+    "PT014",
+    "PT018",
+    "B911",
+    "B020",
+    "B007",
+    "B905",
+    "N802",
+    "N803",
+    "SIM910",
+    "SIM102",
+    "SIM108",
+    "SIM103",
+    "PERF401",
+    "TC001",
+    "TRY003",
+    "RET505",
+    "RUF022",
+    "A002",
+    "UP006",
+    "EM101",
+    "EM101",
+    "RUF021",
+    "SIM114",
+    "SIM110",
+    "RET507",
+    "TC003",
+    "FURB116",
+    "UP035",
+    "ARG002",
+    "PLR1714",
+    "PLR1736",
+    "UP040",
+    "SIM201",
+    "C414",
+    "SIM113",
+    "EM102",
+    "PERF102",
+    "C416",
+    "PLR1730",
+    "PERF402",
+    "PIE808",
+    "FURB132",
+    "C416",
+    "PLW2901",
+    "TC006",
+    "RUF005",
+    "SIM118",
+    "FBT003",
+    "FBT001",
+    "RUF046",
+    "PLR0912",
+    "FBT002",
+    "FBT001",
+    "B904",
+    "RET504",
+    "PLW3301",
+    "PGH003",
+    "RET508",
+    "PERF403",
+    "RET506",
+    "T201",
+    "PLR1722",
+]
+
 [tool.ruff.lint.isort]
 force-single-line = true
